backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back                                                                                                                                                         
spec:
  replicas: 3                                                                                                                                                             
  selector:
    matchLabels:                                                                                                                                                            
      app: back                                                                                                                                                           
  template:
    metadata:                                                                                                                                                               
      labels:                                                                                                                                                               
        app: back                                                                                                                                                          
    spec:
      containers:                                                                                                                                                           
      - name: back                                                                                                                                                    
        image: phcxio7949/project-back:1.0
        ports:                                                                                                                                                              
        - containerPort: 3000                                                                                                                                               
      - name: db                                                                                                                                                          
        image: mongo
