backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: back
